frame/support/test/tests/construct_runtime_ui/both_use_and_excluded_parts.stderr
error: Unexpected tokens, expected one of `=`, `,`
  --> tests/construct_runtime_ui/both_use_and_excluded_parts.rs:29:43
   |
29 |         Pallet: pallet exclude_parts { Pallet } use_parts { Pallet },
   |                                                 ^^^^^^^^^

error[E0412]: cannot find type `RuntimeCall` in this scope
  --> tests/construct_runtime_ui/both_use_and_excluded_parts.rs:18:64
   |
18 | pub type UncheckedExtrinsic = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                                                                ^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
18 | pub type UncheckedExtrinsic<RuntimeCall> = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                            +++++++++++++

error[E0412]: cannot find type `Runtime` in this scope
  --> tests/construct_runtime_ui/both_use_and_excluded_parts.rs:20:25
   |
20 | impl pallet::Config for Runtime {}
   |                         ^^^^^^^ not found in this scope
